--- a/output/A24C/elas.tex
+++ b/output/A24C/elas.tex
@@ -10,6 +10,7 @@
 \date{}
 \begin{document}
 \maketitle
+
 \begin{table}[h]
 \caption{Elasticities}
 \label{Table: elasticities}
@@ -43,6 +44,12 @@ p$_{Sharon fruits}$ & 0 & 0 & 0.00043589 & 0 \\ \hline
 \end{tabular}
 \end{center}
 \end{table}%
+
+\begin{table}[h]
+\caption{Elasticities}
+\label{Table: elasticities}
+\begin{center}
+
 \begin{tabular}{ccccc}
 Price & Cherries & Dates & Apples & Easy Peelers \\ \hline
 p$_{Apricots}$ & 0 & 0 & -0.0046838 & -0.00055836 \\ \hline
@@ -72,6 +79,12 @@ p$_{Sharon fruits}$ & 0 & 0.0059569 & 0 & 0 \\ \hline
 \end{tabular}
 \end{center}
 \end{table}%
+
+\begin{table}[h]
+\caption{Elasticities}
+\label{Table: elasticities}
+\begin{center}
+
 \begin{tabular}{ccccc}
 Price & Grapes & Grapefruits & Kiwis & Lemons and limes \\ \hline
 p$_{Apricots}$ & 0.0016457 & 0 & 0 & 0 \\ \hline
@@ -101,6 +114,12 @@ p$_{Sharon fruits}$ & 0 & 0 & 0 & 0 \\ \hline
 \end{tabular}
 \end{center}
 \end{table}%
+
+\begin{table}[h]
+\caption{Elasticities}
+\label{Table: elasticities}
+\begin{center}
+
 \begin{tabular}{ccccc}
 Price & Lychees & Mangos & Melons & Oranges \\ \hline
 p$_{Apricots}$ & 0 & 0 & 0 & 0.00019272 \\ \hline
@@ -159,6 +178,12 @@ p$_{Sharon fruits}$ & 0 & 0 & 0 & 0 \\ \hline
 \end{tabular}
 \end{center}
 \end{table}%
+
+\begin{table}[h]
+\caption{Elasticities}
+\label{Table: elasticities}
+\begin{center}
+
 \begin{tabular}{ccccc}
 Price & Peaches, plums, and nectarines & Pomegranates & Rhubarb & Sharon fruits \\ \hline
 p$_{Apricots}$ & 0.033797 & 0 & 0.0017252 & 0 \\ \hline
