--- a/output/A24C/elas.tex
+++ b/output/A24C/elas.tex
@@ -43,7 +43,7 @@ p$_{Rhubarb}$ & 0.20605 & 0.048264 & -0.066962 & 0.095392 \\ \hline
 p$_{Sharon fruits}$ & 0 & 0 & 0.00043589 & 0 \\ \hline
 \end{tabular}
 \end{center}
-\end{table}%
+\end{table}
 
 \begin{table}[h]
 \caption{Elasticities}
