--- a/output/A24C/elas.tex
+++ b/output/A24C/elas.tex
@@ -14,9 +14,9 @@
 \caption{Elasticities (1)}
 \label{Table: elasticities 1}
 \begin{center}
-\begin{tabular}{ccccc}
+\begin{tabular}{lcccc}
 Price & Apricots & Avocados & Bananas & Berries \\ \hline
-p$_{Apricots}$ & -7.1015 & 0 & -0.00023452 & 0.00073807 \\ 
+p$_{Apricots}$ & \textbf{-7.1015} & 0 & -0.00023452 & 0.00073807 \\ 
 p$_{Avocados}$ & 0 & -2.0542 & 0.0049399 & -0.0091583 \\ 
 p$_{Bananas}$ & -0.012716 & 0.068443 & -1.2543 & 0.016663 \\ 
 p$_{Berries}$ & 0.19045 & -0.60322 & 0.079388 & -0.99479 \\ 
