--- a/output/A27_20180101/elas1.tex
+++ b/output/A27_20180101/elas1.tex
@@ -16,33 +16,33 @@
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Apricots &Avocados &Bananas &Berries &Cherries &Dates &Apples \\ \hline
-p$_{Apricots}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Avocados}$ & &NaN &-3.3 &-8.1e-05 &0.016 &0 &NaN &0.0021 \\
-p$_{Bananas}$ & &NaN &-0.032 &-0.57 &-0.041 &0.0052 &NaN &0.068 \\
-p$_{Berries}$ & &NaN &0.33 &-0.0022 &-1.8 &0 &NaN &0.029 \\
-p$_{Cherries}$ & &NaN &0 &1.4e-06 &0 &-7.6 &NaN &0 \\
-p$_{Dates}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Apples}$ & &NaN &0.86 &0.072 &0.59 &0 &NaN &-1.4 \\
-p$_{Easy Peelers}$ & &NaN &-0.46 &0.1 &0.37 &-0.085 &NaN &0.55 \\
-p$_{Grapes}$ & &NaN &0.68 &-0.057 &0.022 &3.2e-12 &NaN &0.21 \\
-p$_{Grapefruits}$ & &NaN &0 &-0.0024 &0 &0 &NaN &0 \\
-p$_{Kiwis}$ & &NaN &-0.064 &-0.014 &-0.0071 &0 &NaN &0.42 \\
-p$_{Lemons}$ & &NaN &0.45 &0.013 &0.017 &0 &NaN &0.017 \\
-p$_{Limes}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Lychees}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Mangos}$ & &NaN &0 &0.00035 &0 &0 &NaN &0.0043 \\
-p$_{Melons}$ & &NaN &0 &0.0022 &-0.035 &2.3 &NaN &0.32 \\
-p$_{Nectarines}$ & &NaN &-0.3 &0.061 &-0.00051 &-0.035 &NaN &-0.033 \\
-p$_{Oranges}$ & &NaN &0 &-0.11 &-0.038 &1.3 &NaN &-0.034 \\
-p$_{Passion fruits}$ & &NaN &0 &6.4e-05 &0.0019 &0 &NaN &2.8e-05 \\
-p$_{Paw-paws}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Peaches}$ & &NaN &0 &0.0039 &-0.0041 &0 &NaN &0.00049 \\
-p$_{Pears}$ & &NaN &0.031 &-0.022 &-0.27 &1.8 &NaN &-0.18 \\
-p$_{Pineapples}$ & &NaN &-0.1 &-0.027 &-0.0023 &0 &NaN &-0.0033 \\
-p$_{Plums}$ & &NaN &-0.014 &-0.11 &-0.062 &1.6 &NaN &-0.037 \\
-p$_{Pomegranates}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
-p$_{Rhubarb}$ & &NaN &0.29 &0 &-2e-05 &0 &NaN &0 \\
-p$_{Sharon fruits}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Apricots}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Avocados}$ &NaN &-3.3 &-8.1e-05 &0.016 &0 &NaN &0.0021 \\
+p$_{Bananas}$ &NaN &-0.032 &-0.57 &-0.041 &0.0052 &NaN &0.068 \\
+p$_{Berries}$ &NaN &0.33 &-0.0022 &-1.8 &0 &NaN &0.029 \\
+p$_{Cherries}$ &NaN &0 &1.4e-06 &0 &-7.6 &NaN &0 \\
+p$_{Dates}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Apples}$ &NaN &0.86 &0.072 &0.59 &0 &NaN &-1.4 \\
+p$_{Easy Peelers}$ &NaN &-0.46 &0.1 &0.37 &-0.085 &NaN &0.55 \\
+p$_{Grapes}$ &NaN &0.68 &-0.057 &0.022 &3.2e-12 &NaN &0.21 \\
+p$_{Grapefruits}$ &NaN &0 &-0.0024 &0 &0 &NaN &0 \\
+p$_{Kiwis}$ &NaN &-0.064 &-0.014 &-0.0071 &0 &NaN &0.42 \\
+p$_{Lemons}$ &NaN &0.45 &0.013 &0.017 &0 &NaN &0.017 \\
+p$_{Limes}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Lychees}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Mangos}$ &NaN &0 &0.00035 &0 &0 &NaN &0.0043 \\
+p$_{Melons}$ &NaN &0 &0.0022 &-0.035 &2.3 &NaN &0.32 \\
+p$_{Nectarines}$ &NaN &-0.3 &0.061 &-0.00051 &-0.035 &NaN &-0.033 \\
+p$_{Oranges}$ &NaN &0 &-0.11 &-0.038 &1.3 &NaN &-0.034 \\
+p$_{Passion fruits}$ &NaN &0 &6.4e-05 &0.0019 &0 &NaN &2.8e-05 \\
+p$_{Paw-paws}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Peaches}$ &NaN &0 &0.0039 &-0.0041 &0 &NaN &0.00049 \\
+p$_{Pears}$ &NaN &0.031 &-0.022 &-0.27 &1.8 &NaN &-0.18 \\
+p$_{Pineapples}$ &NaN &-0.1 &-0.027 &-0.0023 &0 &NaN &-0.0033 \\
+p$_{Plums}$ &NaN &-0.014 &-0.11 &-0.062 &1.6 &NaN &-0.037 \\
+p$_{Pomegranates}$ &NaN &0 &0 &0 &0 &NaN &0 \\
+p$_{Rhubarb}$ &NaN &0.29 &0 &-2e-05 &0 &NaN &0 \\
+p$_{Sharon fruits}$ &NaN &0 &0 &0 &0 &NaN &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -52,33 +52,33 @@ p$_{Sharon fruits}$ & &NaN &0 &0 &0 &0 &NaN &0 \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Easy Peelers &Grapes &Grapefruits &Kiwis &Lemons &Limes &Lychees \\ \hline
-p$_{Apricots}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Avocados}$ & &-0.0018 &0.006 &0 &-0.00031 &0.041 &NaN &NaN \\
-p$_{Bananas}$ & &0.33 &-0.2 &-0.33 &-0.027 &0.45 &NaN &NaN \\
-p$_{Berries}$ & &0.03 &0.0041 &0 &-0.00072 &0.031 &NaN &NaN \\
-p$_{Cherries}$ & &-3.6e-05 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Dates}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Apples}$ & &0.89 &0.8 &0 &0.87 &0.63 &NaN &NaN \\
-p$_{Easy Peelers}$ & &-2 &0.38 &-0.2 &0.098 &0.5 &NaN &NaN \\
-p$_{Grapes}$ & &0.19 &-2.1 &-0.084 &-0.034 &0.091 &NaN &NaN \\
-p$_{Grapefruits}$ & &-0.0022 &-0.0021 &-3.3 &0.0039 &-0.0053 &NaN &NaN \\
-p$_{Kiwis}$ & &0.078 &-0.061 &0.28 &-3.3 &0.35 &NaN &NaN \\
-p$_{Lemons}$ & &0.022 &0.0091 &-0.021 &0.019 &-3.3 &NaN &NaN \\
-p$_{Limes}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Lychees}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Mangos}$ & &0 &0 &0 &0.00013 &0 &NaN &NaN \\
-p$_{Melons}$ & &0.5 &-0.14 &0.11 &0.055 &0 &NaN &NaN \\
-p$_{Nectarines}$ & &-0.037 &0.12 &-0.054 &0.38 &0.43 &NaN &NaN \\
-p$_{Oranges}$ & &0.2 &0.0069 &0.64 &0.07 &0 &NaN &NaN \\
-p$_{Passion fruits}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Paw-paws}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Peaches}$ & &-0.0021 &0 &0 &0.033 &0 &NaN &NaN \\
-p$_{Pears}$ & &-0.14 &-0.073 &-0.27 &0.71 &0.39 &NaN &NaN \\
-p$_{Pineapples}$ & &-0.0095 &-0.013 &0.34 &0.0054 &-0.058 &NaN &NaN \\
-p$_{Plums}$ & &0.044 &-0.011 &0.0059 &0.0032 &0 &NaN &NaN \\
-p$_{Pomegranates}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
-p$_{Rhubarb}$ & &0.0007 &0 &0 &-5.1e-05 &-0.0022 &NaN &NaN \\
-p$_{Sharon fruits}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Apricots}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Avocados}$ &-0.0018 &0.006 &0 &-0.00031 &0.041 &NaN &NaN \\
+p$_{Bananas}$ &0.33 &-0.2 &-0.33 &-0.027 &0.45 &NaN &NaN \\
+p$_{Berries}$ &0.03 &0.0041 &0 &-0.00072 &0.031 &NaN &NaN \\
+p$_{Cherries}$ &-3.6e-05 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Dates}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Apples}$ &0.89 &0.8 &0 &0.87 &0.63 &NaN &NaN \\
+p$_{Easy Peelers}$ &-2 &0.38 &-0.2 &0.098 &0.5 &NaN &NaN \\
+p$_{Grapes}$ &0.19 &-2.1 &-0.084 &-0.034 &0.091 &NaN &NaN \\
+p$_{Grapefruits}$ &-0.0022 &-0.0021 &-3.3 &0.0039 &-0.0053 &NaN &NaN \\
+p$_{Kiwis}$ &0.078 &-0.061 &0.28 &-3.3 &0.35 &NaN &NaN \\
+p$_{Lemons}$ &0.022 &0.0091 &-0.021 &0.019 &-3.3 &NaN &NaN \\
+p$_{Limes}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Lychees}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Mangos}$ &0 &0 &0 &0.00013 &0 &NaN &NaN \\
+p$_{Melons}$ &0.5 &-0.14 &0.11 &0.055 &0 &NaN &NaN \\
+p$_{Nectarines}$ &-0.037 &0.12 &-0.054 &0.38 &0.43 &NaN &NaN \\
+p$_{Oranges}$ &0.2 &0.0069 &0.64 &0.07 &0 &NaN &NaN \\
+p$_{Passion fruits}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Paw-paws}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Peaches}$ &-0.0021 &0 &0 &0.033 &0 &NaN &NaN \\
+p$_{Pears}$ &-0.14 &-0.073 &-0.27 &0.71 &0.39 &NaN &NaN \\
+p$_{Pineapples}$ &-0.0095 &-0.013 &0.34 &0.0054 &-0.058 &NaN &NaN \\
+p$_{Plums}$ &0.044 &-0.011 &0.0059 &0.0032 &0 &NaN &NaN \\
+p$_{Pomegranates}$ &0 &0 &0 &0 &0 &NaN &NaN \\
+p$_{Rhubarb}$ &0.0007 &0 &0 &-5.1e-05 &-0.0022 &NaN &NaN \\
+p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &NaN &NaN \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -88,33 +88,33 @@ p$_{Sharon fruits}$ & &0 &0 &0 &0 &0 &NaN &NaN \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Mangos &Melons &Nectarines &Oranges &Passion fruits &Paw-paws &Peaches \\ \hline
-p$_{Apricots}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Avocados}$ & &5.6e-12 &0 &-0.0011 &0 &0 &NaN &0 \\
-p$_{Bananas}$ & &0.012 &-0.051 &0.58 &-0.37 &0.91 &NaN &0.3 \\
-p$_{Berries}$ & &0 &-0.0015 &-3.7e-05 &-0.0035 &1.4 &NaN &-0.016 \\
-p$_{Cherries}$ & &0 &0.00051 &-1.3e-05 &0.0006 &0 &NaN &0 \\
-p$_{Dates}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Apples}$ & &0.16 &0.27 &-0.048 &-0.062 &0.42 &NaN &0.039 \\
-p$_{Easy Peelers}$ & &0 &0.13 &-0.033 &-0.015 &0 &NaN &-0.1 \\
-p$_{Grapes}$ & &0 &-0.03 &0.084 &0.0034 &0 &NaN &0 \\
-p$_{Grapefruits}$ & &0 &0.00066 &-0.00054 &0.0081 &0 &NaN &0 \\
-p$_{Kiwis}$ & &0.0023 &0.023 &0.27 &0.062 &0 &NaN &1.3 \\
-p$_{Lemons}$ & &0 &0 &0.017 &0 &0 &NaN &0 \\
-p$_{Limes}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Lychees}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Mangos}$ & &-3.9 &0.0011 &0.0025 &0.018 &0 &NaN &0 \\
-p$_{Melons}$ & &0.049 &-2.1 &0.96 &-0.3 &0 &NaN &0 \\
-p$_{Nectarines}$ & &0.063 &0.2 &-2 &-0.1 &0 &NaN &0.28 \\
-p$_{Oranges}$ & &0.37 &-0.14 &0.55 &-2.2 &0 &NaN &0 \\
-p$_{Passion fruits}$ & &0 &0 &0 &0 &-14 &NaN &0 \\
-p$_{Paw-paws}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Peaches}$ & &0 &0 &0.0052 &0 &0 &NaN &-9.6 \\
-p$_{Pears}$ & &0.078 &0.24 &0.42 &0.7 &-8.3e-12 &NaN &0.31 \\
-p$_{Pineapples}$ & &0.0037 &-0.00043 &-0.0024 &0.065 &0 &NaN &0 \\
-p$_{Plums}$ & &-0.058 &0.11 &-0.0044 &0.16 &1.1 &NaN &0 \\
-p$_{Pomegranates}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Rhubarb}$ & &0 &0 &0 &0 &0 &NaN &0 \\
-p$_{Sharon fruits}$ & &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Apricots}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Avocados}$ &5.6e-12 &0 &-0.0011 &0 &0 &NaN &0 \\
+p$_{Bananas}$ &0.012 &-0.051 &0.58 &-0.37 &0.91 &NaN &0.3 \\
+p$_{Berries}$ &0 &-0.0015 &-3.7e-05 &-0.0035 &1.4 &NaN &-0.016 \\
+p$_{Cherries}$ &0 &0.00051 &-1.3e-05 &0.0006 &0 &NaN &0 \\
+p$_{Dates}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Apples}$ &0.16 &0.27 &-0.048 &-0.062 &0.42 &NaN &0.039 \\
+p$_{Easy Peelers}$ &0 &0.13 &-0.033 &-0.015 &0 &NaN &-0.1 \\
+p$_{Grapes}$ &0 &-0.03 &0.084 &0.0034 &0 &NaN &0 \\
+p$_{Grapefruits}$ &0 &0.00066 &-0.00054 &0.0081 &0 &NaN &0 \\
+p$_{Kiwis}$ &0.0023 &0.023 &0.27 &0.062 &0 &NaN &1.3 \\
+p$_{Lemons}$ &0 &0 &0.017 &0 &0 &NaN &0 \\
+p$_{Limes}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Lychees}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Mangos}$ &-3.9 &0.0011 &0.0025 &0.018 &0 &NaN &0 \\
+p$_{Melons}$ &0.049 &-2.1 &0.96 &-0.3 &0 &NaN &0 \\
+p$_{Nectarines}$ &0.063 &0.2 &-2 &-0.1 &0 &NaN &0.28 \\
+p$_{Oranges}$ &0.37 &-0.14 &0.55 &-2.2 &0 &NaN &0 \\
+p$_{Passion fruits}$ &0 &0 &0 &0 &-14 &NaN &0 \\
+p$_{Paw-paws}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Peaches}$ &0 &0 &0.0052 &0 &0 &NaN &-9.6 \\
+p$_{Pears}$ &0.078 &0.24 &0.42 &0.7 &-8.3e-12 &NaN &0.31 \\
+p$_{Pineapples}$ &0.0037 &-0.00043 &-0.0024 &0.065 &0 &NaN &0 \\
+p$_{Plums}$ &-0.058 &0.11 &-0.0044 &0.16 &1.1 &NaN &0 \\
+p$_{Pomegranates}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Rhubarb}$ &0 &0 &0 &0 &0 &NaN &0 \\
+p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &NaN &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -124,33 +124,33 @@ p$_{Sharon fruits}$ & &0 &0 &0 &0 &0 &NaN &0 \\
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
 Price &Passion fruits &Paw-paws &Peaches &Pears &Pineapples &Plums \\ \hline
-p$_{Apricots}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Avocados}$ & &0 &NaN &0 &5.4e-05 &-0.0037 &-0.00013 \\
-p$_{Bananas}$ & &0.91 &NaN &0.3 &0.049 &-0.38 &-0.38 \\
-p$_{Berries}$ & &1.4 &NaN &-0.016 &-0.0095 &-0.0017 &-0.011 \\
-p$_{Cherries}$ & &0 &NaN &0 &0.00033 &0 &0.0015 \\
-p$_{Dates}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Apples}$ & &0.42 &NaN &0.039 &-0.13 &-0.049 &-0.14 \\
-p$_{Easy Peelers}$ & &0 &NaN &-0.1 &-0.062 &-0.085 &0.099 \\
-p$_{Grapes}$ & &0 &NaN &0 &-0.014 &-0.052 &-0.01 \\
-p$_{Grapefruits}$ & &0 &NaN &0 &-0.0013 &0.034 &0.00015 \\
-p$_{Kiwis}$ & &0 &NaN &1.3 &0.25 &0.039 &0.0058 \\
-p$_{Lemons}$ & &0 &NaN &0 &0.0075 &-0.023 &0 \\
-p$_{Limes}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Lychees}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Mangos}$ & &0 &NaN &0 &0.0015 &0.0014 &-0.0058 \\
-p$_{Melons}$ & &0 &NaN &0 &0.26 &-0.0073 &0.49 \\
-p$_{Nectarines}$ & &0 &NaN &0.28 &0.21 &-0.024 &-0.011 \\
-p$_{Oranges}$ & &0 &NaN &0 &0.36 &0.52 &0.31 \\
-p$_{Passion fruits}$ & &-14 &NaN &0 &0 &0 &0.00027 \\
-p$_{Paw-paws}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Peaches}$ & &0 &NaN &-9.6 &0.0028 &0 &0 \\
-p$_{Pears}$ & &-8.3e-12 &NaN &0.31 &-0.57 &0.68 &0.092 \\
-p$_{Pineapples}$ & &0 &NaN &0 &0.033 &-2.7 &0.31 \\
-p$_{Plums}$ & &1.1 &NaN &0 &0.018 &1.3 &-2 \\
-p$_{Pomegranates}$ & &0 &NaN &0 &0 &0 &0 \\
-p$_{Rhubarb}$ & &0 &NaN &0 &-4e-05 &0.0078 &0 \\
-p$_{Sharon fruits}$ & &0 &NaN &0 &1e-05 &0 &0 \\
+p$_{Apricots}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Avocados}$ &0 &NaN &0 &5.4e-05 &-0.0037 &-0.00013 \\
+p$_{Bananas}$ &0.91 &NaN &0.3 &0.049 &-0.38 &-0.38 \\
+p$_{Berries}$ &1.4 &NaN &-0.016 &-0.0095 &-0.0017 &-0.011 \\
+p$_{Cherries}$ &0 &NaN &0 &0.00033 &0 &0.0015 \\
+p$_{Dates}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Apples}$ &0.42 &NaN &0.039 &-0.13 &-0.049 &-0.14 \\
+p$_{Easy Peelers}$ &0 &NaN &-0.1 &-0.062 &-0.085 &0.099 \\
+p$_{Grapes}$ &0 &NaN &0 &-0.014 &-0.052 &-0.01 \\
+p$_{Grapefruits}$ &0 &NaN &0 &-0.0013 &0.034 &0.00015 \\
+p$_{Kiwis}$ &0 &NaN &1.3 &0.25 &0.039 &0.0058 \\
+p$_{Lemons}$ &0 &NaN &0 &0.0075 &-0.023 &0 \\
+p$_{Limes}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Lychees}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Mangos}$ &0 &NaN &0 &0.0015 &0.0014 &-0.0058 \\
+p$_{Melons}$ &0 &NaN &0 &0.26 &-0.0073 &0.49 \\
+p$_{Nectarines}$ &0 &NaN &0.28 &0.21 &-0.024 &-0.011 \\
+p$_{Oranges}$ &0 &NaN &0 &0.36 &0.52 &0.31 \\
+p$_{Passion fruits}$ &-14 &NaN &0 &0 &0 &0.00027 \\
+p$_{Paw-paws}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Peaches}$ &0 &NaN &-9.6 &0.0028 &0 &0 \\
+p$_{Pears}$ &-8.3e-12 &NaN &0.31 &-0.57 &0.68 &0.092 \\
+p$_{Pineapples}$ &0 &NaN &0 &0.033 &-2.7 &0.31 \\
+p$_{Plums}$ &1.1 &NaN &0 &0.018 &1.3 &-2 \\
+p$_{Pomegranates}$ &0 &NaN &0 &0 &0 &0 \\
+p$_{Rhubarb}$ &0 &NaN &0 &-4e-05 &0.0078 &0 \\
+p$_{Sharon fruits}$ &0 &NaN &0 &1e-05 &0 &0 \\
 \end{tabular}
 \end{center}
 \end{table}
