--- a/output/A27_20180101/baskets.tex
+++ b/output/A27_20180101/baskets.tex
@@ -14,7 +14,8 @@
 \caption{Fruit baskets: by household type}
 \label{table:fruit baskets}
 \begin{center}
-\begin{tabular}{lc}
+\tiny
+\begin{tabular}{ll}
 \hline \hline
 HH ID & Fruit basket \\
 1 & Bananas \\
