--- a/output/A27_20180101/baskets.tex
+++ b/output/A27_20180101/baskets.tex
@@ -14,30 +14,38 @@
 \caption{Fruit baskets: by household type}
 \label{table:fruit baskets}
 \begin{center}
-\tiny
-\begin{tabular}{ll}
+\begin{tabular}{lc}
 \hline \hline
 HH ID & Fruit basket \\
 1 & Bananas \\
 1 & Bananas, Apples \\
 1 & Bananas, Apples, Easy Peelers \\
-1 & Bananas, Apples, Easy Peelers, Melons \\
-1 & Bananas, Apples, Easy Peelers, Melons, Nectarines \\
-1 & Bananas, Apples, Easy Peelers, Melons, Nectarines, Pears \\
-1 & Bananas, Apples, Easy Peelers, Melons, Nectarines, Pears, Plums \\
+1 & Bananas, Apples, Easy Peelers, Grapes \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears, Pineapples \\
+1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears, Pineapples, Plums \\
 2 & Bananas \\
 2 & Bananas, Apples \\
-2 & Bananas, Apples, Kiwis \\
-2 & Bananas, Apples, Kiwis, Melons \\
-2 & Bananas, Apples, Kiwis, Melons, Nectarines \\
-2 & Bananas, Apples, Kiwis, Melons, Nectarines, Pears \\
+2 & Bananas, Apples, Easy Peelers \\
+2 & Bananas, Apples, Easy Peelers, Grapes \\
+2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
+2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
+2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
+2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
+2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
 3 & Bananas \\
 3 & Bananas, Apples \\
 3 & Bananas, Apples, Easy Peelers \\
-3 & Bananas, Apples, Easy Peelers, Kiwis \\
-3 & Bananas, Apples, Easy Peelers, Kiwis, Melons \\
-3 & Bananas, Apples, Easy Peelers, Kiwis, Melons, Nectarines \\
-3 & Bananas, Apples, Easy Peelers, Kiwis, Melons, Nectarines, Pears \\
+3 & Bananas, Apples, Easy Peelers, Grapes \\
+3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
+3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
+3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
+3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
+3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
 4 & Bananas \\
 4 & Bananas, Apples \\
 4 & Bananas, Apples, Easy Peelers \\
@@ -46,32 +54,37 @@ HH ID & Fruit basket \\
 4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons \\
 4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines \\
 4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines, Pears \\
+4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines, Pears, Plums \\
 5 & Bananas \\
 5 & Bananas, Apples \\
 5 & Bananas, Apples, Easy Peelers \\
 5 & Bananas, Apples, Easy Peelers, Grapes \\
 5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
 5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
+5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
+5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
+5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
+5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Pears \\
 6 & Bananas \\
 6 & Bananas, Apples \\
 6 & Bananas, Apples, Easy Peelers \\
 6 & Bananas, Apples, Easy Peelers, Grapes \\
 6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
 6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
+6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
+6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
+6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
+6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Peaches \\
+6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Peaches, Pears \\
 7 & Bananas \\
 7 & Bananas, Apples \\
 7 & Bananas, Apples, Easy Peelers \\
-7 & Bananas, Apples, Easy Peelers, Grapes \\
-7 & Bananas, Apples, Easy Peelers, Grapes, Lemons \\
-7 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons \\
-7 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines \\
-7 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines, Pears \\
+7 & Bananas, Apples, Easy Peelers, Lemons \\
+7 & Bananas, Apples, Easy Peelers, Lemons, Mangos \\
+7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons \\
+7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines \\
+7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines, Pears \\
+7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines, Pears, Plums \\
 8 & Bananas \\
 8 & Bananas, Apples \\
 8 & Bananas, Apples, Easy Peelers \\
@@ -88,8 +101,12 @@ HH ID & Fruit basket \\
 9 & Bananas, Apples, Easy Peelers, Grapes \\
 9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
 9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Pears \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges, Peaches \\
+9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges, Peaches, Pears \\
 \hline \hline
 \end{tabular}
 \end{center}
