--- a/output/A27_20180101/baskets.tex
+++ b/output/A27_20180101/baskets.tex
@@ -4,109 +4,105 @@
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{epstopdf}
-\DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
-\title{Fruit baskets}
-\author{Lars Nesheim}
-\date{}
 \begin{document}
-\maketitle
 \begin{table}[h]
 \caption{Fruit baskets: by household type}
 \label{table:fruit baskets}
 \begin{center}
-\begin{tabular}{lc}
+\tiny
+\begin{tabular}{ll}
 \hline \hline
 HH ID & Fruit basket \\
 1 & Bananas \\
-1 & Bananas, Apples \\
-1 & Bananas, Apples, Easy Peelers \\
-1 & Bananas, Apples, Easy Peelers, Grapes \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears, Pineapples \\
-1 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears, Pineapples, Plums \\
+1 & Bananas,Apples \\
+1 & Bananas,Apples,Easy Peelers \\
+1 & Bananas,Apples,Easy Peelers,Grapes \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines,Pears \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines,Pears,Pineapples \\
+1 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines,Pears,Pineapples,Plums \\
 2 & Bananas \\
-2 & Bananas, Apples \\
-2 & Bananas, Apples, Easy Peelers \\
-2 & Bananas, Apples, Easy Peelers, Grapes \\
-2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
-2 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
+2 & Bananas,Apples \\
+2 & Bananas,Apples,Easy Peelers \\
+2 & Bananas,Apples,Easy Peelers,Grapes \\
+2 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+2 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+2 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons \\
+2 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines \\
+2 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines,Pears \\
 3 & Bananas \\
-3 & Bananas, Apples \\
-3 & Bananas, Apples, Easy Peelers \\
-3 & Bananas, Apples, Easy Peelers, Grapes \\
-3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons \\
-3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines \\
-3 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Melons, Nectarines, Pears \\
+3 & Bananas,Apples \\
+3 & Bananas,Apples,Easy Peelers \\
+3 & Bananas,Apples,Easy Peelers,Grapes \\
+3 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+3 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+3 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons \\
+3 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines \\
+3 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Melons,Nectarines,Pears \\
 4 & Bananas \\
-4 & Bananas, Apples \\
-4 & Bananas, Apples, Easy Peelers \\
-4 & Bananas, Apples, Easy Peelers, Grapes \\
-4 & Bananas, Apples, Easy Peelers, Grapes, Lemons \\
-4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons \\
-4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines \\
-4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines, Pears \\
-4 & Bananas, Apples, Easy Peelers, Grapes, Lemons, Melons, Nectarines, Pears, Plums \\
+4 & Bananas,Apples \\
+4 & Bananas,Apples,Easy Peelers \\
+4 & Bananas,Apples,Easy Peelers,Grapes \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Lemons \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Lemons,Melons \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Lemons,Melons,Nectarines \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Lemons,Melons,Nectarines,Pears \\
+4 & Bananas,Apples,Easy Peelers,Grapes,Lemons,Melons,Nectarines,Pears,Plums \\
 5 & Bananas \\
-5 & Bananas, Apples \\
-5 & Bananas, Apples, Easy Peelers \\
-5 & Bananas, Apples, Easy Peelers, Grapes \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
-5 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Pears \\
+5 & Bananas,Apples \\
+5 & Bananas,Apples,Easy Peelers \\
+5 & Bananas,Apples,Easy Peelers,Grapes \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines \\
+5 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Pears \\
 6 & Bananas \\
-6 & Bananas, Apples \\
-6 & Bananas, Apples, Easy Peelers \\
-6 & Bananas, Apples, Easy Peelers, Grapes \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Peaches \\
-6 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Peaches, Pears \\
+6 & Bananas,Apples \\
+6 & Bananas,Apples,Easy Peelers \\
+6 & Bananas,Apples,Easy Peelers,Grapes \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Peaches \\
+6 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Peaches,Pears \\
 7 & Bananas \\
-7 & Bananas, Apples \\
-7 & Bananas, Apples, Easy Peelers \\
-7 & Bananas, Apples, Easy Peelers, Lemons \\
-7 & Bananas, Apples, Easy Peelers, Lemons, Mangos \\
-7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons \\
-7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines \\
-7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines, Pears \\
-7 & Bananas, Apples, Easy Peelers, Lemons, Mangos, Melons, Nectarines, Pears, Plums \\
+7 & Bananas,Apples \\
+7 & Bananas,Apples,Easy Peelers \\
+7 & Bananas,Apples,Easy Peelers,Lemons \\
+7 & Bananas,Apples,Easy Peelers,Lemons,Mangos \\
+7 & Bananas,Apples,Easy Peelers,Lemons,Mangos,Melons \\
+7 & Bananas,Apples,Easy Peelers,Lemons,Mangos,Melons,Nectarines \\
+7 & Bananas,Apples,Easy Peelers,Lemons,Mangos,Melons,Nectarines,Pears \\
+7 & Bananas,Apples,Easy Peelers,Lemons,Mangos,Melons,Nectarines,Pears,Plums \\
 8 & Bananas \\
-8 & Bananas, Apples \\
-8 & Bananas, Apples, Easy Peelers \\
-8 & Bananas, Apples, Easy Peelers, Grapes \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
-8 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Pears \\
+8 & Bananas,Apples \\
+8 & Bananas,Apples,Easy Peelers \\
+8 & Bananas,Apples,Easy Peelers,Grapes \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines \\
+8 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Pears \\
 9 & Bananas \\
-9 & Bananas, Apples \\
-9 & Bananas, Apples, Easy Peelers \\
-9 & Bananas, Apples, Easy Peelers, Grapes \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges, Peaches \\
-9 & Bananas, Apples, Easy Peelers, Grapes, Kiwis, Lemons, Mangos, Melons, Nectarines, Oranges, Peaches, Pears \\
+9 & Bananas,Apples \\
+9 & Bananas,Apples,Easy Peelers \\
+9 & Bananas,Apples,Easy Peelers,Grapes \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Oranges \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Oranges,Peaches \\
+9 & Bananas,Apples,Easy Peelers,Grapes,Kiwis,Lemons,Mangos,Melons,Nectarines,Oranges,Peaches,Pears \\
 \hline \hline
 \end{tabular}
 \end{center}
