--- a/output/A27_20180101/elas1.tex
+++ b/output/A27_20180101/elas1.tex
@@ -11,32 +11,32 @@
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Apricots &Avocados &Bananas &Berries &Cherries &Dates &Apples \\ \hline
-p$_{Apricots}$ &-2 &0.053 &0 &0 &0 &0 &0 \\
-p$_{Avocados}$ &1.3 &-3 &-7.4e-05 &0.01 &0 &1.2 &0.0022 \\
-p$_{Bananas}$ &0 &-0.031 &-0.61 &-0.059 &0.02 &-0.11 &0.11 \\
-p$_{Berries}$ &0 &0.19 &-0.0027 &-1.7 &0 &1.3e-11 &0.035 \\
-p$_{Cherries}$ &0 &0 &1.9e-05 &0 &-4.2 &0 &0 \\
-p$_{Dates}$ &0 &0.24 &-5.3e-05 &0 &0 &-3.6 &0 \\
-p$_{Apples}$ &0 &0.77 &0.088 &0.63 &0 &0 &-2 \\
-p$_{Easy Peelers}$ &-2.7e-12 &-0.52 &0.091 &0.32 &0.15 &0.79 &0.89 \\
-p$_{Grapes}$ &0 &0.14 &-0.041 &0.021 &-0.22 &-2.6e-12 &0.29 \\
-p$_{Grapefruits}$ &0.61 &-0.099 &-0.002 &0 &0 &0 &0 \\
-p$_{Kiwis}$ &-1.2 &-0.17 &-0.0034 &-0.03 &0 &-0.42 &0.52 \\
-p$_{Lemons}$ &-3e-12 &0.11 &0.024 &0.019 &0 &-0.017 &0.051 \\
+p$_{Apricots}$\textbf{-2} &0.0529 &0 &0 &0 &0 &0 \\
+p$_{Avocados}$ &1.28\textbf{-2.96} &-7.42e-05 &0.00996 &0 &1.19 &0.00224 \\
+p$_{Bananas}$ &0 &-0.0314\textbf{-0.614} &-0.0592 &0.0198 &-0.11 &0.108 \\
+p$_{Berries}$ &0 &0.194 &-0.00272\textbf{-1.67} &0 &1.29e-11 &0.0354 \\
+p$_{Cherries}$ &0 &0 &1.89e-05 &0\textbf{-4.22} &0 &0 \\
+p$_{Dates}$ &0 &0.241 &-5.29e-05 &0 &0\textbf{-3.57} &0 \\
+p$_{Apples}$ &0 &0.774 &0.0879 &0.626 &0 &0\textbf{-1.97} \\
+p$_{Easy Peelers}$ &-2.75e-12 &-0.524 &0.0906 &0.317 &0.148 &0.788 &0.894 \\
+p$_{Grapes}$ &0 &0.143 &-0.0408 &0.0205 &-0.22 &-2.61e-12 &0.29 \\
+p$_{Grapefruits}$ &0.608 &-0.0988 &-0.00196 &0 &0 &0 &0 \\
+p$_{Kiwis}$ &-1.23 &-0.168 &-0.00336 &-0.0304 &0 &-0.416 &0.517 \\
+p$_{Lemons}$ &-2.95e-12 &0.112 &0.024 &0.0191 &0 &-0.0173 &0.0513 \\
 p$_{Limes}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Lychees}$ &0 &0.86 &0 &-0.00082 &0 &0 &0.00032 \\
-p$_{Mangos}$ &0 &0 &-0.0008 &0 &0 &0 &0.0082 \\
-p$_{Melons}$ &0 &0 &0.15 &0.016 &0.43 &0 &0.085 \\
-p$_{Nectarines}$ &0 &-0.1 &0.097 &-9.8e-05 &-0.015 &0.41 &0.066 \\
-p$_{Oranges}$ &0 &0 &0.014 &-0.06 &1.9 &0 &-0.034 \\
-p$_{Passion fruits}$ &0 &0 &9.9e-05 &0.011 &0 &0 &0 \\
-p$_{Paw-paws}$ &0 &0.035 &-0.00015 &0.0026 &0 &0 &0.00091 \\
-p$_{Peaches}$ &0 &0 &0.0064 &0 &0 &0 &-0.0019 \\
-p$_{Pears}$ &-0.15 &0.44 &-0.026 &-0.17 &0.62 &1.9e-11 &-0.17 \\
-p$_{Pineapples}$ &0 &-0.18 &-0.043 &-0.16 &0 &0 &-0.011 \\
-p$_{Plums}$ &0 &-0.0063 &-0.11 &-0.05 &0.37 &0 &-0.11 \\
-p$_{Pomegranates}$ &0 &0 &0 &0.0046 &0 &0 &-8.1e-05 \\
-p$_{Rhubarb}$ &0 &-0.013 &0 &0.0018 &0 &-4.4e-12 &7.3e-05 \\
+p$_{Lychees}$ &0 &0.863 &0 &-0.000824 &0 &0 &0.000319 \\
+p$_{Mangos}$ &0 &0 &-0.000797 &0 &0 &0 &0.00821 \\
+p$_{Melons}$ &0 &0 &0.148 &0.016 &0.429 &0 &0.0851 \\
+p$_{Nectarines}$ &0 &-0.103 &0.0972 &-9.8e-05 &-0.0148 &0.406 &0.0659 \\
+p$_{Oranges}$ &0 &0 &0.0143 &-0.0602 &1.9 &0 &-0.0344 \\
+p$_{Passion fruits}$ &0 &0 &9.91e-05 &0.0108 &0 &0 &0 \\
+p$_{Paw-paws}$ &0 &0.0353 &-0.000147 &0.00262 &0 &0 &0.00091 \\
+p$_{Peaches}$ &0 &0 &0.0064 &0 &0 &0 &-0.00188 \\
+p$_{Pears}$ &-0.148 &0.441 &-0.0262 &-0.165 &0.625 &1.94e-11 &-0.166 \\
+p$_{Pineapples}$ &0 &-0.185 &-0.0432 &-0.157 &0 &0 &-0.0108 \\
+p$_{Plums}$ &0 &-0.0063 &-0.109 &-0.0503 &0.371 &0 &-0.107 \\
+p$_{Pomegranates}$ &0 &0 &0 &0.0046 &0 &0 &-8.15e-05 \\
+p$_{Rhubarb}$ &0 &-0.013 &0 &0.00181 &0 &-4.37e-12 &7.3e-05 \\
 p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
 \end{tabular}
 \end{center}
@@ -47,32 +47,32 @@ p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
 \begin{center}
 \begin{tabular}{lccccccc} \hline \hline
 Price &Easy Peelers &Grapes &Grapefruits &Kiwis &Lemons &Limes &Lychees \\ \hline
-p$_{Apricots}$ &0 &0 &0.018 &-0.00021 &0 &0 &0 \\
-p$_{Avocados}$ &-0.0019 &0.0015 &-0.073 &-0.0007 &0.0057 &0 &7.5 \\
-p$_{Bananas}$ &0.14 &-0.18 &-0.61 &-0.011 &0.51 &0 &0 \\
-p$_{Berries}$ &0.022 &0.0041 &0 &-0.0025 &0.019 &0 &-0.14 \\
-p$_{Cherries}$ &0.00021 &-0.00091 &0 &0 &0 &0 &0 \\
-p$_{Dates}$ &0.00058 &0 &0 &-0.00035 &-0.00018 &0 &0 \\
-p$_{Apples}$ &1.1 &1 &0 &0.76 &0.9 &0 &0.96 \\
-p$_{Easy Peelers}$ &-2.1 &0.44 &-0.17 &0.29 &0.49 &-0.59 &8.2 \\
-p$_{Grapes}$ &0.15 &-2.1 &0.21 &-0.041 &0.047 &0 &0 \\
-p$_{Grapefruits}$ &-0.00083 &0.0029 &-4.7 &0.00047 &-0.014 &0 &0 \\
-p$_{Kiwis}$ &0.18 &-0.1 &0.083 &-3.6 &0.5 &0 &0 \\
-p$_{Lemons}$ &0.035 &0.0096 &-0.2 &0.042 &-3.4 &0 &-4.2 \\
-p$_{Limes}$ &-0.00015 &0 &0 &0 &0 &-2.9 &0 \\
-p$_{Lychees}$ &0.0034 &0 &0 &0 &-0.024 &0 &-18 \\
-p$_{Mangos}$ &0 &0 &0 &0.0011 &0 &0 &0 \\
-p$_{Melons}$ &0.22 &0.012 &0 &0.013 &0 &0 &0 \\
-p$_{Nectarines}$ &-0.031 &0.053 &0.0033 &0.47 &0.3 &1.9 &0 \\
-p$_{Oranges}$ &-0.008 &-0.014 &1.7 &0.083 &0 &0 &0 \\
+p$_{Apricots}$ &0 &0 &0.0185 &-0.000214 &0 &0 &0 \\
+p$_{Avocados}$ &-0.00189 &0.00146 &-0.0726 &-0.000703 &0.00567 &0 &7.51 \\
+p$_{Bananas}$ &0.138 &-0.177 &-0.61 &-0.0115 &0.515 &0 &0 \\
+p$_{Berries}$ &0.0222 &0.0041 &0 &-0.00249 &0.0189 &0 &-0.14 \\
+p$_{Cherries}$ &0.000214 &-0.000908 &0 &0 &0 &0 &0 \\
+p$_{Dates}$ &0.000575 &0 &0 &-0.000354 &-0.000178 &0 &0 \\
+p$_{Apples}$ &1.11 &1.02 &0 &0.761 &0.898 &0 &0.959 \\
+p$_{Easy Peelers}$\textbf{-2.12} &0.438 &-0.17 &0.285 &0.495 &-0.59 &8.24 \\
+p$_{Grapes}$ &0.154\textbf{-2.14} &0.209 &-0.0411 &0.0474 &0 &0 \\
+p$_{Grapefruits}$ &-0.000832 &0.00291\textbf{-4.69} &0.000474 &-0.0139 &0 &0 \\
+p$_{Kiwis}$ &0.177 &-0.1 &0.083\textbf{-3.55} &0.502 &0 &0 \\
+p$_{Lemons}$ &0.0351 &0.00957 &-0.202 &0.0416\textbf{-3.42} &0 &-4.16 \\
+p$_{Limes}$ &-0.000148 &0 &0 &0 &0\textbf{-2.88} &0 \\
+p$_{Lychees}$ &0.00341 &0 &0 &0 &-0.0243 &0\textbf{-17.9} \\
+p$_{Mangos}$ &0 &0 &0 &0.00106 &0 &0 &0 \\
+p$_{Melons}$ &0.22 &0.0119 &0 &0.0133 &0 &0 &0 \\
+p$_{Nectarines}$ &-0.031 &0.0531 &0.00331 &0.465 &0.304 &1.92 &0 \\
+p$_{Oranges}$ &-0.00799 &-0.014 &1.67 &0.0835 &0 &0 &0 \\
 p$_{Passion fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Paw-paws}$ &0.00063 &0 &0 &0.0018 &0 &0 &0 \\
-p$_{Peaches}$ &-0.0024 &0 &0 &0.044 &0 &-0.73 &0 \\
-p$_{Pears}$ &-0.31 &-0.048 &-0.29 &1.3 &0.68 &0.81 &-1.5e-10 \\
-p$_{Pineapples}$ &-0.014 &0.0045 &-0.18 &0.0093 &-0.18 &0 &0.39 \\
-p$_{Plums}$ &0.05 &-0.006 &-0.02 &0.017 &-0.012 &1 &-0.12 \\
+p$_{Paw-paws}$ &0.000627 &0 &0 &0.00179 &0 &0 &0 \\
+p$_{Peaches}$ &-0.0024 &0 &0 &0.0444 &0 &-0.734 &0 \\
+p$_{Pears}$ &-0.308 &-0.0484 &-0.285 &1.25 &0.684 &0.807 &-1.51e-10 \\
+p$_{Pineapples}$ &-0.0137 &0.00448 &-0.18 &0.00932 &-0.18 &0 &0.394 \\
+p$_{Plums}$ &0.0502 &-0.00602 &-0.0201 &0.0166 &-0.012 &1.04 &-0.123 \\
 p$_{Pomegranates}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Rhubarb}$ &3e-05 &0 &0 &0 &-0.00029 &0 &0 \\
+p$_{Rhubarb}$ &3.01e-05 &0 &0 &0 &-0.000294 &0 &0 \\
 p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
 \end{tabular}
 \end{center}
@@ -84,32 +84,32 @@ p$_{Sharon fruits}$ &0 &0 &0 &0 &0 &0 &0 \\
 \begin{tabular}{lccccccc} \hline \hline
 Price &Mangos &Melons &Nectarines &Oranges &Passion fruits &Paw-paws &Peaches \\ \hline
 p$_{Apricots}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Avocados}$ &0 &0 &-0.0003 &0 &0 &0.11 &0 \\
-p$_{Bananas}$ &-0.023 &0.28 &0.12 &0.023 &0.16 &-0.2 &0.32 \\
-p$_{Berries}$ &0 &0.0014 &-5.5e-06 &-0.0044 &0.82 &0.16 &0 \\
-p$_{Cherries}$ &0 &0.00078 &-1.7e-05 &0.0029 &0 &0 &0 \\
-p$_{Dates}$ &0 &0 &0.00024 &0 &0 &0 &0 \\
-p$_{Apples}$ &0.19 &0.13 &0.066 &-0.044 &0 &1 &-0.077 \\
-p$_{Easy Peelers}$ &0 &0.28 &-0.025 &-0.0083 &0 &0.55 &-0.079 \\
-p$_{Grapes}$ &0 &0.0052 &0.015 &-0.0051 &0 &0 &0 \\
-p$_{Grapefruits}$ &0 &0 &1.3e-05 &0.0085 &0 &0 &0 \\
-p$_{Kiwis}$ &0.017 &0.014 &0.32 &0.074 &0 &1.4 &1.3 \\
-p$_{Lemons}$ &0 &0 &0.017 &0 &0 &0 &0 \\
-p$_{Limes}$ &0 &0 &0.00039 &0 &0 &0 &-0.0061 \\
+p$_{Avocados}$ &0 &0 &-0.000297 &0 &0 &0.112 &0 \\
+p$_{Bananas}$ &-0.0229 &0.282 &0.119 &0.0226 &0.164 &-0.197 &0.322 \\
+p$_{Berries}$ &0 &0.00141 &-5.52e-06 &-0.00439 &0.824 &0.162 &0 \\
+p$_{Cherries}$ &0 &0.000779 &-1.72e-05 &0.00287 &0 &0 &0 \\
+p$_{Dates}$ &0 &0 &0.000238 &0 &0 &0 &0 \\
+p$_{Apples}$ &0.193 &0.132 &0.0656 &-0.0445 &0 &0.995 &-0.077 \\
+p$_{Easy Peelers}$ &0 &0.276 &-0.0248 &-0.00831 &0 &0.553 &-0.0793 \\
+p$_{Grapes}$ &0 &0.00524 &0.015 &-0.00511 &0 &0 &0 \\
+p$_{Grapefruits}$ &0 &0 &1.3e-05 &0.00849 &0 &0 &0 \\
+p$_{Kiwis}$ &0.0172 &0.0143 &0.32 &0.0745 &0 &1.36 &1.26 \\
+p$_{Lemons}$ &0 &0 &0.0173 &0 &0 &0 &0 \\
+p$_{Limes}$ &0 &0 &0.000387 &0 &0 &0 &-0.0061 \\
 p$_{Lychees}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Mangos}$ &-4.1 &0.027 &0.0019 &0.023 &-0.051 &0 &0 \\
-p$_{Melons}$ &0.41 &-3.3 &0.29 &0.058 &0 &0 &0 \\
-p$_{Nectarines}$ &0.044 &0.45 &-2.4 &-0.057 &0 &0 &0.61 \\
-p$_{Oranges}$ &0.42 &0.069 &-0.044 &-2 &0 &0 &0 \\
-p$_{Passion fruits}$ &-0.00089 &0 &0 &0 &-9.1 &0 &0 \\
-p$_{Paw-paws}$ &0 &0 &0 &0 &0 &-4.2 &0 \\
-p$_{Peaches}$ &0 &0 &0.015 &0 &0 &0 &-8.1 \\
-p$_{Pears}$ &0.19 &0.25 &0.77 &1.1 &0 &0 &0.26 \\
-p$_{Pineapples}$ &0.0058 &-0.00011 &-0.004 &0.15 &0.00055 &-0.0072 &0 \\
-p$_{Plums}$ &-0.039 &0.19 &-0.0056 &0.12 &-0.064 &-7.6e-12 &0 \\
-p$_{Pomegranates}$ &0 &0 &0 &0 &5.7 &0 &0 \\
+p$_{Mangos}$\textbf{-4.06} &0.0274 &0.00186 &0.023 &-0.0512 &0 &0 \\
+p$_{Melons}$ &0.414\textbf{-3.26} &0.289 &0.0577 &0 &0 &0 \\
+p$_{Nectarines}$ &0.0438 &0.451\textbf{-2.37} &-0.057 &0 &0 &0.613 \\
+p$_{Oranges}$ &0.417 &0.0695 &-0.0439\textbf{-1.95} &0 &0 &0 \\
+p$_{Passion fruits}$ &-0.000892 &0 &0 &0\textbf{-9.12} &0 &0 \\
+p$_{Paw-paws}$ &0 &0 &0 &0 &0\textbf{-4.17} &0 \\
+p$_{Peaches}$ &0 &0 &0.0149 &0 &0 &0\textbf{-8.13} \\
+p$_{Pears}$ &0.187 &0.251 &0.768 &1.08 &0 &0 &0.257 \\
+p$_{Pineapples}$ &0.00581 &-0.000111 &-0.00401 &0.152 &0.000551 &-0.00725 &0 \\
+p$_{Plums}$ &-0.0386 &0.192 &-0.0056 &0.124 &-0.0637 &-7.62e-12 &0 \\
+p$_{Pomegranates}$ &0 &0 &0 &0 &5.68 &0 &0 \\
 p$_{Rhubarb}$ &0 &0 &0 &0 &0 &0 &0 \\
-p$_{Sharon fruits}$ &0 &0 &-0.00019 &0.00017 &0 &0 &0 \\
+p$_{Sharon fruits}$ &0 &0 &-0.000192 &0.00017 &0 &0 &0 \\
 \end{tabular}
 \end{center}
 \end{table}
@@ -119,33 +119,33 @@ p$_{Sharon fruits}$ &0 &0 &-0.00019 &0.00017 &0 &0 &0 \\
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
 Price &Pears &Pineapples &Plums &Pomegranates &Rhubarb &Sharon fruits \\ \hline
-p$_{Apricots}$ &-9.3e-06 &0 &0 &0 &0 &0 \\
-p$_{Avocados}$ &0.00067 &-0.0051 &-4.8e-05 &0 &-0.51 &0 \\
-p$_{Bananas}$ &-0.017 &-0.51 &-0.35 &3.1e-12 &0 &0 \\
-p$_{Berries}$ &-0.0049 &-0.085 &-0.0075 &1.2 &1.4 &0 \\
-p$_{Cherries}$ &0.00038 &0 &0.0011 &0 &0 &0 \\
+p$_{Apricots}$ &-9.31e-06 &0 &0 &0 &0 &0 \\
+p$_{Avocados}$ &0.000671 &-0.00514 &-4.84e-05 &0 &-0.514 &0 \\
+p$_{Bananas}$ &-0.0169 &-0.509 &-0.355 &3.11e-12 &0 &0 \\
+p$_{Berries}$ &-0.00491 &-0.0854 &-0.00753 &1.22 &1.39 &0 \\
+p$_{Cherries}$ &0.000383 &0 &0.00115 &0 &0 &0 \\
 p$_{Dates}$ &0 &0 &0 &0 &0 &0 \\
-p$_{Apples}$ &-0.087 &-0.1 &-0.28 &-0.38 &0.99 &0 \\
-p$_{Easy Peelers}$ &-0.13 &-0.11 &0.11 &0 &0.33 &0 \\
-p$_{Grapes}$ &-0.0072 &0.012 &-0.0045 &0 &0 &0 \\
-p$_{Grapefruits}$ &-0.00059 &-0.0068 &-0.00021 &0 &0 &0 \\
-p$_{Kiwis}$ &0.41 &0.062 &0.03 &0 &0 &0 \\
-p$_{Lemons}$ &0.021 &-0.099 &-0.0018 &0 &-0.23 &0 \\
-p$_{Limes}$ &8.6e-05 &0 &0.00056 &0 &0 &0 \\
-p$_{Lychees}$ &0 &0.0013 &-0.00011 &0 &0 &0 \\
-p$_{Mangos}$ &0.0042 &0.0024 &-0.0044 &0 &0 &0 \\
-p$_{Melons}$ &0.085 &-0.00069 &0.33 &0 &0 &0 \\
-p$_{Nectarines}$ &0.41 &-0.039 &-0.015 &0 &0 &-0.6 \\
-p$_{Oranges}$ &0.44 &1.1 &0.25 &0 &0 &0.41 \\
-p$_{Passion fruits}$ &0 &3.9e-06 &-0.00013 &20 &0 &0 \\
-p$_{Paw-paws}$ &0 &-6.4e-05 &0 &0 &0 &0 \\
-p$_{Peaches}$ &0.0033 &0 &0 &0 &0 &0 \\
-p$_{Pears}$ &-1.2 &1 &0.27 &0 &3.7e-12 &0.088 \\
-p$_{Pineapples}$ &0.057 &-3 &0.29 &0 &0.97 &0 \\
-p$_{Plums}$ &0.054 &1.1 &-1.7 &1.3 &0 &-0.45 \\
-p$_{Pomegranates}$ &0 &0 &0.00074 &-29 &0 &0 \\
-p$_{Rhubarb}$ &0 &0.00068 &0 &0 &-4.1 &0 \\
-p$_{Sharon fruits}$ &1.5e-05 &0 &-0.00038 &0 &0 &-2.6 \\
+p$_{Apples}$ &-0.0871 &-0.104 &-0.282 &-0.381 &0.994 &0 \\
+p$_{Easy Peelers}$ &-0.13 &-0.106 &0.107 &0 &0.33 &0 \\
+p$_{Grapes}$ &-0.00717 &0.0122 &-0.00452 &0 &0 &0 \\
+p$_{Grapefruits}$ &-0.00059 &-0.00681 &-0.00021 &0 &0 &0 \\
+p$_{Kiwis}$ &0.407 &0.0618 &0.0303 &0 &0 &0 \\
+p$_{Lemons}$ &0.0205 &-0.0986 &-0.00182 &0 &-0.229 &0 \\
+p$_{Limes}$ &8.6e-05 &0 &0.000559 &0 &0 &0 \\
+p$_{Lychees}$ &0 &0.00126 &-0.000109 &0 &0 &0 \\
+p$_{Mangos}$ &0.00418 &0.00238 &-0.00436 &0 &0 &0 \\
+p$_{Melons}$ &0.0849 &-0.000688 &0.328 &0 &0 &0 \\
+p$_{Nectarines}$ &0.405 &-0.0387 &-0.0149 &0 &0 &-0.596 \\
+p$_{Oranges}$ &0.441 &1.13 &0.254 &0 &0 &0.409 \\
+p$_{Passion fruits}$ &0 &3.93e-06 &-0.000125 &19.7 &0 &0 \\
+p$_{Paw-paws}$ &0 &-6.36e-05 &0 &0 &0 &0 \\
+p$_{Peaches}$ &0.00329 &0 &0 &0 &0 &0 \\
+p$_{Pears}$\textbf{-1.21} &1.03 &0.273 &0 &3.66e-12 &0.088 \\
+p$_{Pineapples}$ &0.0566\textbf{-3.04} &0.294 &0 &0.967 &0 \\
+p$_{Plums}$ &0.054 &1.06\textbf{-1.71} &1.3 &0 &-0.447 \\
+p$_{Pomegranates}$ &0 &0 &0.000739\textbf{-28.5} &0 &0 \\
+p$_{Rhubarb}$ &0 &0.000682 &0 &0\textbf{-4.13} &0 \\
+p$_{Sharon fruits}$ &1.49e-05 &0 &-0.000383 &0 &0\textbf{-2.56} \\
 \end{tabular}
 \end{center}
 \end{table}
