--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -6,88 +6,89 @@
 \usepackage{epstopdf}
 \begin{document}
 \begin{table}[h]
-\caption{Tax impact on demand}
+\caption{Percentage change in demand due to tax/price change}
 \label{table:tax impact 1}
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
-Fruit & Baseline & Policy1 & Policy2 & Policy3 & Policy4 & Policy5 \\ \hline
-Apricots &0.000108 &-48.2 &-19 &-0.228 &15.7 &-3.28 \\
-Avocados &0.000499 &-22.6 &-2.93 &4.65 &15.2 &-2.59 \\
-Bananas &0.641 &-7.43 &1.13 &0.0428 &3.77 &-0.522 \\
-Berries &0.0074 &-19.5 &-4.81 &-6.97 &13.9 &-1.98 \\
-Cherries &0.000125 &-20.7 &-3.74 &-6.43 &11.9 &-0.784 \\
+& & \multicolumn{5}{c}{percentage change} \\
+Fruit & Baseline (kg) &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
+Apricots &0.000108\% &-19 &-0.228 &-3.28 &15.7 &-48.2 \\
+Avocados &0.000499\% &-2.93 &4.65 &-2.59 &15.2 &-22.6 \\
+Bananas &0.641\% &1.13 &0.0428 &-0.522 &3.77 &-7.43 \\
+Berries &0.0074\% &-4.81 &-6.97 &-1.98 &13.9 &-19.5 \\
+Cherries &0.000125\% &-3.74 &-6.43 &-0.784 &11.9 &-20.7 \\
 \hline
-Dates &0.000601 &-15.7 &5.02 &2.29e-10 &24.3 &-0.523 \\
-Apples &0.442 &-4.72 &2.22 &-3.17 &2.01 &-0.456 \\
-Easy Peelers &0.343 &-9.03 &-4.74 &1.55 &5.55 &-1.02 \\
-Grapes &0.0916 &-17 &-2.74 &1.42 &9.86 &-0.974 \\
-Grapefruits &0.00337 &-54.9 &1.74 &-0.428 &55.8 &-7.31 \\
+Dates &0.000601\% &5.02 &2.29e-10 &-0.523 &24.3 &-15.7 \\
+Apples &0.442\% &2.22 &-3.17 &-0.456 &2.01 &-4.72 \\
+Easy Peelers &0.343\% &-4.74 &1.55 &-1.02 &5.55 &-9.03 \\
+Grapes &0.0916\% &-2.74 &1.42 &-0.974 &9.86 &-17 \\
+Grapefruits &0.00337\% &1.74 &-0.428 &-7.31 &55.8 &-54.9 \\
 \hline
-Kiwis &0.34 &-15.1 &-11 &2.89 &9.02 &-0.929 \\
-Lemons &0.0227 &-3.49 &-4.8 &3.01 &1.59 &-0.401 \\
-Limes &0.000172 &-31.3 &-0.549 &1.51 &19.1 &-1.82 \\
-Lychees &0.000135 &-45.1 &27.7 &0.844 &18 &-3.19 \\
-Mangos &0.0236 &-43.5 &5.28 &0.616 &33.1 &-3.62 \\
+Kiwis &0.34\% &-11 &2.89 &-0.929 &9.02 &-15.1 \\
+Lemons &0.0227\% &-4.8 &3.01 &-0.401 &1.59 &-3.49 \\
+Limes &0.000172\% &-0.549 &1.51 &-1.82 &19.1 &-31.3 \\
+Lychees &0.000135\% &27.7 &0.844 &-3.19 &18 &-45.1 \\
+Mangos &0.0236\% &5.28 &0.616 &-3.62 &33.1 &-43.5 \\
 \hline
-Melons &0.257 &-26.4 &0.314 &0.694 &16.9 &-2.03 \\
-Nectarines &0.296 &-15.8 &-7 &1.19 &8.68 &-2.1 \\
-Oranges &0.319 &-10.3 &0.687 &1.66 &5.28 &-1.05 \\
-Passion fruits &0.000187 &-43.4 &10.7 &3.53 &26.2 &-5.77 \\
-Paw-paws &0.000567 &-20.3 &57.7 &2.37 &12.2 &-1.32 \\
+Melons &0.257\% &0.314 &0.694 &-2.03 &16.9 &-26.4 \\
+Nectarines &0.296\% &-7 &1.19 &-2.1 &8.68 &-15.8 \\
+Oranges &0.319\% &0.687 &1.66 &-1.05 &5.28 &-10.3 \\
+Passion fruits &0.000187\% &10.7 &3.53 &-5.77 &26.2 &-43.4 \\
+Paw-paws &0.000567\% &57.7 &2.37 &-1.32 &12.2 &-20.3 \\
 \hline
-Peaches &0.00895 &-71.2 &-44.9 &0.203 &73.6 &-8.71 \\
-Pears &0.581 &0.492 &-0.223 &-1.97 &-0.951 &0.193 \\
-Pineapples &0.0801 &-11.2 &10.9 &1.81 &7.3 &0.0302 \\
-Plums &0.133 &-18.8 &-3.02 &-0.546 &11.6 &-1.85 \\
-Pomegranates &7.83e-05 &-100 &-58.7 &4.98 &69.2 &0.867 \\
+Peaches &0.00895\% &-44.9 &0.203 &-8.71 &73.6 &-71.2 \\
+Pears &0.581\% &-0.223 &-1.97 &0.193 &-0.951 &0.492 \\
+Pineapples &0.0801\% &10.9 &1.81 &0.0302 &7.3 &-11.2 \\
+Plums &0.133\% &-3.02 &-0.546 &-1.85 &11.6 &-18.8 \\
+Pomegranates &7.83e-05\% &-58.7 &4.98 &0.867 &69.2 &-100 \\
 \hline
-Rhubarb &1.42e-05 &-29 &102 &-100 &11.9 &-2.8 \\
-Sharon fruits &2.86e-05 &-54.6 &-4.63 &0.0192 &34.1 &-5.39 \\
+Rhubarb &1.42e-05\% &102 &-100 &-2.8 &11.9 &-29 \\
+Sharon fruits &2.86e-05\% &-4.63 &0.0192 &-5.39 &34.1 &-54.6 \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows baseline demand for each fruit (grams per household per shopping trip). The remaining columns show the percentage impact of the policies.}
+\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
 \end{tabular}
 \end{center}
 \end{table}
 \begin{table}[h]
-\caption{Tax impact on prices}
+\caption{Percentage change in price due to tax/price change}
 \label{table:tax impact 2}
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
-Fruit & Baseline & Policy1 & Policy2 & Policy3 & Policy4 & Policy5 \\ \hline
-Apricots &0.837 &20 &6.52 &-1.44e-13 &-10 &2.21 \\
-Avocados &4.4 &20 &1.93 &2.62e-11 &-10 &1.73 \\
-Bananas &1.45 &20 &-2.1e-11 &-2.1e-11 &-10 &1.56 \\
-Berries &5.79 &20 &3.54 &4.3 &-10 &1.75 \\
-Cherries &7.1 &20 &3.47 &1.9 &-10 &1.45 \\
+Fruit & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
+Apricots &0.837 &6.52\% &-1.44e-13\% &2.21\% &-10\% &20\% \\
+Avocados &4.4 &1.93\% &2.62e-11\% &1.73\% &-10\% &20\% \\
+Bananas &1.45 &-2.1e-11\% &-2.1e-11\% &1.56\% &-10\% &20\% \\
+Berries &5.79 &3.54\% &4.3\% &1.75\% &-10\% &20\% \\
+Cherries &7.1 &3.47\% &1.9\% &1.45\% &-10\% &20\% \\
 \hline
-Dates &0.742 &20 &0.05 &-4.71e-11 &-10 &1.08 \\
-Apples &1.71 &20 &2.86 &1.54 &-10 &1.66 \\
-Easy Peelers &1.78 &20 &4.24 &5.55e-11 &-10 &1.71 \\
-Grapes &2.34 &20 &3.39 &0.08 &-10 &1.46 \\
-Grapefruits &0.887 &20 &0.87 &-2.1e-11 &-10 &1.75 \\
+Dates &0.742 &0.05\% &-4.71e-11\% &1.08\% &-10\% &20\% \\
+Apples &1.71 &2.86\% &1.54\% &1.66\% &-10\% &20\% \\
+Easy Peelers &1.78 &4.24\% &5.55e-11\% &1.71\% &-10\% &20\% \\
+Grapes &2.34 &3.39\% &0.08\% &1.46\% &-10\% &20\% \\
+Grapefruits &0.887 &0.87\% &-2.1e-11\% &1.75\% &-10\% &20\% \\
 \hline
-Kiwis &1.54 &20 &6.65 &-1.23e-11 &-10 &1.55 \\
-Lemons &1.91 &20 &5.21 &-2.88e-11 &-10 &1.7 \\
-Limes &0.893 &20 &2.27 &-9.31e-12 &-10 &1.91 \\
-Lychees &1.87 &20 &-3.55e-11 &-3.55e-11 &-10 &1.4 \\
-Mangos &1.37 &20 &-3.81e-12 &-3.81e-12 &-10 &1.38 \\
+Kiwis &1.54 &6.65\% &-1.23e-11\% &1.55\% &-10\% &20\% \\
+Lemons &1.91 &5.21\% &-2.88e-11\% &1.7\% &-10\% &20\% \\
+Limes &0.893 &2.27\% &-9.31e-12\% &1.91\% &-10\% &20\% \\
+Lychees &1.87 &-3.55e-11\% &-3.55e-11\% &1.4\% &-10\% &20\% \\
+Mangos &1.37 &-3.81e-12\% &-3.81e-12\% &1.38\% &-10\% &20\% \\
 \hline
-Melons &1.9 &20 &1.81 &-4.76e-11 &-10 &1.51 \\
-Nectarines &2.57 &20 &5.96 &-5.3e-11 &-10 &1.91 \\
-Oranges &1.84 &20 &2.88 &-2.86e-11 &-10 &1.66 \\
-Passion fruits &3 &20 &4.32e-11 &4.32e-11 &-10 &1.51 \\
-Paw-paws &1.22 &20 &2.09e-11 &2.09e-11 &-10 &1.48 \\
+Melons &1.9 &1.81\% &-4.76e-11\% &1.51\% &-10\% &20\% \\
+Nectarines &2.57 &5.96\% &-5.3e-11\% &1.91\% &-10\% &20\% \\
+Oranges &1.84 &2.88\% &-2.86e-11\% &1.66\% &-10\% &20\% \\
+Passion fruits &3 &4.32e-11\% &4.32e-11\% &1.51\% &-10\% &20\% \\
+Paw-paws &1.22 &2.09e-11\% &2.09e-11\% &1.48\% &-10\% &20\% \\
 \hline
-Peaches &2.07 &20 &8.97 &3.03e-11 &-10 &1.54 \\
-Pears &2.49 &20 &5.15 &1.54 &-10 &1.59 \\
-Pineapples &0.985 &20 &-3.81e-11 &-3.81e-11 &-10 &1.22 \\
-Plums &2.15 &20 &3.19 &0.26 &-10 &1.61 \\
-Pomegranates &2.07 &20 &3.71 &-4.84e-11 &-10 &1.14 \\
+Peaches &2.07 &8.97\% &3.03e-11\% &1.54\% &-10\% &20\% \\
+Pears &2.49 &5.15\% &1.54\% &1.59\% &-10\% &20\% \\
+Pineapples &0.985 &-3.81e-11\% &-3.81e-11\% &1.22\% &-10\% &20\% \\
+Plums &2.15 &3.19\% &0.26\% &1.61\% &-10\% &20\% \\
+Pomegranates &2.07 &3.71\% &-4.84e-11\% &1.14\% &-10\% &20\% \\
 \hline
-Rhubarb &3.92 &20 &0.11 &9.87 &-10 &1.78 \\
-Sharon fruits &8.56 &20 &0.5 &6.1e-11 &-10 &1.7 \\
+Rhubarb &3.92 &0.11\% &9.87\% &1.78\% &-10\% &20\% \\
+Sharon fruits &8.56 &0.5\% &6.1e-11\% &1.7\% &-10\% &20\% \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per gram). The remaining columns show the percentage impact of the policies.}
+\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline price for each fruit (GBP per kilogram). The remaining columns show the percentage impact of the change in tax or prices.}
 \end{tabular}
 \end{center}
 \end{table}
@@ -96,27 +97,27 @@ Sharon fruits &8.56 &20 &0.5 &6.1e-11 &-10 &1.7 \\
 \label{table:tax impact welfare}
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
- & Baseline & Policy1 & Policy2 & Policy3 & Policy4 & Policy5 \\ \hline
+ & Baseline &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
 Consumer expenditure & & & & & & \\
-10th percentile &0 &NaN &NaN &NaN &NaN &NaN \\
-25th percentile &0 &NaN &NaN &NaN &NaN &NaN \\
-50th percentile &0 &NaN &NaN &NaN &NaN &NaN \\
-75th percentile &0 &NaN &NaN &NaN &NaN &NaN \\
-90th percentile &0 &NaN &NaN &NaN &NaN &NaN \\
+10th percentile &3.36 &0.689\% &0.415\% &0.419\% &-3.59\% &3.69\% \\
+25th percentile &4.73 &1.21\% &0.489\% &0.606\% &-4.49\% &6.66\% \\
+50th percentile &6.46 &1.65\% &0.509\% &0.72\% &-5.03\% &8.33\% \\
+75th percentile &8.5 &1.98\% &0.473\% &0.747\% &-5.23\% &8.94\% \\
+90th percentile &10.7 &2.02\% &0.414\% &0.795\% &-4.95\% &9.06\% \\
 \hline 
-Consumer welfare & & & & & & \\
-10th percentile &-23.9 &1.93 &0.399 &0.0483 &-1.04 &0.164 \\
-25th percentile &-17.2 &1.6 &0.321 &0.046 &-0.849 &0.139 \\
-50th percentile &-11.3 &1.25 &0.243 &0.034 &-0.695 &0.11 \\
-75th percentile &-6.85 &0.976 &0.18 &0.0259 &-0.514 &0.089 \\
-90th percentile &-3.89 &0.706 &0.125 &0.0191 &-0.402 &0.062 \\
+Change in consumer surplus (GBP) & & & & & & \\
+10th percentile &3.89 &-0.125 &-0.02 &-0.0611 &0.403 &-0.704 \\
+25th percentile &6.85 &-0.179 &-0.0258 &-0.0886 &0.514 &-0.976 \\
+50th percentile &11.3 &-0.243 &-0.0355 &-0.11 &0.696 &-1.25 \\
+75th percentile &17.2 &-0.321 &-0.0465 &-0.139 &0.849 &-1.6 \\
+90th percentile &23.9 &-0.4 &-0.051 &-0.166 &1.04 &-1.93 \\
 \hline 
 Per capita effects & & & & & & \\
-Welfare & -12.9 &1.3 &0.245 &0.0362 &-0.702 &0.111 \\
-Tax revenue & 0.0 &1.23 &0.241 &0.0357 &-0.722 &0.11 \\
-Firm Revenue & 6.83 &-9.98 &-1.85 &-0.0564 &5.73 &-0.881 \\
+Consumer surplus (GBP) & 12.9 &-0.245 &-0.0362 &-0.111 &0.702 &-1.3 \\
+Tax revenue (GBP) & 0.0 &0.241 &0.0357 &0.11 &-0.722 &1.23 \\
+Firm Revenue & 6.83 &-1.85\% &-0.0564\% &-0.881\% &5.73\% &-9.98\% \\
  \hline \hline
-\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue due to each policy. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
+\multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows the baseline values for expenditure, consumer surplus, firm revenue and tax revenue. All amounts are measured in pounds per household per shopping trip. Columns 2 - 7 show the percentage change in expenditure, the absolute change in consumer surplus, the percentage change in firm revenue and the absolute change in tax revenue arising in each scenario. Because of quasilinear utility the change in consumer surplus equals compensating variation.}
 \end{tabular}
 \end{center}
 \end{table}
