edit tax table format.

--- a/output/A27_20180101/taxresults.tex
+++ b/output/A27_20180101/taxresults.tex
@@ -10,40 +10,39 @@
 \label{table:tax impact 1}
 \begin{center}
 \begin{tabular}{lcccccc} \hline \hline
-& & \multicolumn{5}{c}{percentage change} \\
 Fruit & Baseline (kg) &EU Tariff scenario &UK Cost Shock scenario &Merger scenario &Subsidy scenario &VAT scenario \\ \hline
-Apricots &0.000108\% &-19 &-0.228 &-3.28 &15.7 &-48.2 \\
-Avocados &0.000499\% &-2.93 &4.65 &-2.59 &15.2 &-22.6 \\
-Bananas &0.641\% &1.13 &0.0428 &-0.522 &3.77 &-7.43 \\
-Berries &0.0074\% &-4.81 &-6.97 &-1.98 &13.9 &-19.5 \\
-Cherries &0.000125\% &-3.74 &-6.43 &-0.784 &11.9 &-20.7 \\
+Apricots &0.000108 &-19\% &-0.228\% &-3.28\% &15.7\% &-48.2\% \\
+Avocados &0.000499 &-2.93\% &4.65\% &-2.59\% &15.2\% &-22.6\% \\
+Bananas &0.641 &1.13\% &0.0428\% &-0.522\% &3.77\% &-7.43\% \\
+Berries &0.0074 &-4.81\% &-6.97\% &-1.98\% &13.9\% &-19.5\% \\
+Cherries &0.000125 &-3.74\% &-6.43\% &-0.784\% &11.9\% &-20.7\% \\
 \hline
-Dates &0.000601\% &5.02 &2.29e-10 &-0.523 &24.3 &-15.7 \\
-Apples &0.442\% &2.22 &-3.17 &-0.456 &2.01 &-4.72 \\
-Easy Peelers &0.343\% &-4.74 &1.55 &-1.02 &5.55 &-9.03 \\
-Grapes &0.0916\% &-2.74 &1.42 &-0.974 &9.86 &-17 \\
-Grapefruits &0.00337\% &1.74 &-0.428 &-7.31 &55.8 &-54.9 \\
+Dates &0.000601 &5.02\% &2.29e-10\% &-0.523\% &24.3\% &-15.7\% \\
+Apples &0.442 &2.22\% &-3.17\% &-0.456\% &2.01\% &-4.72\% \\
+Easy Peelers &0.343 &-4.74\% &1.55\% &-1.02\% &5.55\% &-9.03\% \\
+Grapes &0.0916 &-2.74\% &1.42\% &-0.974\% &9.86\% &-17\% \\
+Grapefruits &0.00337 &1.74\% &-0.428\% &-7.31\% &55.8\% &-54.9\% \\
 \hline
-Kiwis &0.34\% &-11 &2.89 &-0.929 &9.02 &-15.1 \\
-Lemons &0.0227\% &-4.8 &3.01 &-0.401 &1.59 &-3.49 \\
-Limes &0.000172\% &-0.549 &1.51 &-1.82 &19.1 &-31.3 \\
-Lychees &0.000135\% &27.7 &0.844 &-3.19 &18 &-45.1 \\
-Mangos &0.0236\% &5.28 &0.616 &-3.62 &33.1 &-43.5 \\
+Kiwis &0.34 &-11\% &2.89\% &-0.929\% &9.02\% &-15.1\% \\
+Lemons &0.0227 &-4.8\% &3.01\% &-0.401\% &1.59\% &-3.49\% \\
+Limes &0.000172 &-0.549\% &1.51\% &-1.82\% &19.1\% &-31.3\% \\
+Lychees &0.000135 &27.7\% &0.844\% &-3.19\% &18\% &-45.1\% \\
+Mangos &0.0236 &5.28\% &0.616\% &-3.62\% &33.1\% &-43.5\% \\
 \hline
-Melons &0.257\% &0.314 &0.694 &-2.03 &16.9 &-26.4 \\
-Nectarines &0.296\% &-7 &1.19 &-2.1 &8.68 &-15.8 \\
-Oranges &0.319\% &0.687 &1.66 &-1.05 &5.28 &-10.3 \\
-Passion fruits &0.000187\% &10.7 &3.53 &-5.77 &26.2 &-43.4 \\
-Paw-paws &0.000567\% &57.7 &2.37 &-1.32 &12.2 &-20.3 \\
+Melons &0.257 &0.314\% &0.694\% &-2.03\% &16.9\% &-26.4\% \\
+Nectarines &0.296 &-7\% &1.19\% &-2.1\% &8.68\% &-15.8\% \\
+Oranges &0.319 &0.687\% &1.66\% &-1.05\% &5.28\% &-10.3\% \\
+Passion fruits &0.000187 &10.7\% &3.53\% &-5.77\% &26.2\% &-43.4\% \\
+Paw-paws &0.000567 &57.7\% &2.37\% &-1.32\% &12.2\% &-20.3\% \\
 \hline
-Peaches &0.00895\% &-44.9 &0.203 &-8.71 &73.6 &-71.2 \\
-Pears &0.581\% &-0.223 &-1.97 &0.193 &-0.951 &0.492 \\
-Pineapples &0.0801\% &10.9 &1.81 &0.0302 &7.3 &-11.2 \\
-Plums &0.133\% &-3.02 &-0.546 &-1.85 &11.6 &-18.8 \\
-Pomegranates &7.83e-05\% &-58.7 &4.98 &0.867 &69.2 &-100 \\
+Peaches &0.00895 &-44.9\% &0.203\% &-8.71\% &73.6\% &-71.2\% \\
+Pears &0.581 &-0.223\% &-1.97\% &0.193\% &-0.951\% &0.492\% \\
+Pineapples &0.0801 &10.9\% &1.81\% &0.0302\% &7.3\% &-11.2\% \\
+Plums &0.133 &-3.02\% &-0.546\% &-1.85\% &11.6\% &-18.8\% \\
+Pomegranates &7.83e-05 &-58.7\% &4.98\% &0.867\% &69.2\% &-100\% \\
 \hline
-Rhubarb &1.42e-05\% &102 &-100 &-2.8 &11.9 &-29 \\
-Sharon fruits &2.86e-05\% &-4.63 &0.0192 &-5.39 &34.1 &-54.6 \\
+Rhubarb &1.42e-05 &102\% &-100\% &-2.8\% &11.9\% &-29\% \\
+Sharon fruits &2.86e-05 &-4.63\% &0.0192\% &-5.39\% &34.1\% &-54.6\% \\
  \hline \hline
 \multicolumn{7}{p{0.8 \textwidth}}{Note: The first column shows baseline demand for each fruit (kilograms per household per shopping trip). The remaining columns show the percentage change in demand resulting from the change in tax or prices.}
 \end{tabular}
